--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -249,7 +249,9 @@
   width: fit-content;
   height: fit-content;
   position: absolute;
-  background-color: #356066f1;
+  /* background-color: #356066f1; */
+  color: #031926;
+  background-color: rgba(157, 190, 187, 0.9);
   top: 4vw;
   font-size: 1.1vw;
   border-radius: 5px;
@@ -266,7 +268,7 @@
 
 @media screen and (width: 1440px) {
   .private-chat-history {
-    right: 12vw;
+    right: 15.5vw;
   }
 }
 
@@ -289,12 +291,22 @@
 }
 
 .private-chat-history ul li {
-  padding: 0.5em;
-  border-radius: 5px;
+  padding: 0.3em;
+  /* border-radius: 5px; */
+  border-bottom: 1px solid #031926;
+}
+
+.private-chat-history ul li:last-child {
+  border-bottom: none;
 }
 
 .private-chat-history ul li:hover {
   background-color: rgba(5, 46, 70, 0.65);
+  color: #F4E9CD;
+}
+
+.private-chat-history ul li:hover .private-chat-other-username {
+  color: #F4E9CD;
 }
 
 .private-chat-link {
@@ -305,17 +317,27 @@
   grid-template-columns: auto auto;
 }
 
+.private-chat-title {
+  font-weight: bold;
+  margin-bottom: 0.1em;
+  border-bottom: 2px solid #031926;
+}
+
 .private-chat-link:active {
   color: inherit;
 }
 
 .private-chat-other-username {
-  margin-right: 1em;
-  color: #ead39a;
+  color: rgba(3, 25, 38, 0.65);
 }
 
 .private-chat-link .enter-private-chat {
   text-align: right;
+}
+
+.enter-chat-icon {
+  position: relative;
+  top: 0.05em;
 }
 
 @media screen and (width > 1440px) {
