searchbar dropdown menu

--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -141,11 +141,11 @@
   }
 
   50% {
-    border: 5px solid #61e687;
+    border: 5px solid #96f1cd;
   }
 
   75% {
-    border: 5px solid #cdea77;
+    border: 5px solid #68b6a9;
   }
 
   100% {
