--- a/frontend/src/components/SearchBar/SearchBar.css
+++ b/frontend/src/components/SearchBar/SearchBar.css
@@ -56,6 +56,7 @@
   width: 29vw;
   height: fit-content;
   background-color: #9DBEBB;
+  border: 1px solid #F4E9CD;
   z-index: 10;
   color: #031926;
 }
