--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -249,8 +249,8 @@
   width: fit-content;
   height: fit-content;
   position: absolute;
-  color: #031926;
-  background-color: rgba(157, 190, 187, 0.9);
+  color: #F4E9CD;
+  background-color: rgba(70, 129, 137, 0.85);
   top: 4vw;
   font-size: 1.1vw;
   border-radius: 5px;
@@ -292,7 +292,7 @@
 
 .private-chat-history ul li {
   padding: 0.3em;
-  border-bottom: 1px solid #031926;
+  border-bottom: 1px solid #F4E9CD;
 }
 
 .private-chat-history ul li:last-child {
@@ -301,11 +301,11 @@
 
 .private-chat-history ul li:hover {
   background-color: rgba(5, 46, 70, 0.65);
-  color: #F4E9CD;
+  color: #FEFCFB;
 }
 
 .private-chat-history ul li:hover .private-chat-other-username {
-  color: #F4E9CD;
+  color: #FEFCFB;
 }
 
 .private-chat-link {
@@ -319,7 +319,7 @@
 .private-chat-title {
   font-weight: bold;
   margin-bottom: 0.1em;
-  border-bottom: 2px solid #031926;
+  border-bottom: 2px solid #F4E9CD;
 }
 
 .private-chat-link:active {
@@ -327,7 +327,7 @@
 }
 
 .private-chat-other-username {
-  color: rgba(3, 25, 38, 0.65);
+  color: #F4E9CD;
 }
 
 .private-chat-link .enter-private-chat {
