--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -7,7 +7,7 @@
   display: grid;
   grid-template-columns: 20vw 55vw 20vw;
   column-gap: 1%;
-  height: 45vw;
+  height: 80vh;
   color: inherit;
   letter-spacing: 0.05vw;
 }
@@ -15,7 +15,31 @@
 @media screen and (width > 1440px) {
   .pg-container {
     top: 6vw;
-    height: 38vw;
+    height: 80vh
+  }
+}
+
+@media screen and (width <= 1300px) {
+  .pg-container {
+    height: 82vh;
+  }
+}
+
+@media screen and (width <= 1100px) {
+  .pg-container {
+    height: 84vh;
+  }
+}
+
+@media screen and (width <= 800px) {
+  .pg-container {
+    height: 86vh;
+  }
+}
+
+@media screen and (width <= 600px) {
+  .pg-container {
+    height: 90vh;
   }
 }
 
@@ -245,18 +269,25 @@
     top: 0.75vw;
   }
 }
+
 .text-me{
   font-size: 7rem;
 }
 
 .private-chat-room {
   position: absolute;
+  right: 4vw;
+}
+
+@media screen and (width > 1440px) {
+  .private-chat-room {
+    right: 4.5vw;
+  }
 }
 
 .imageProblem{
   width: 70%;
   max-height: 100%;
-  
 }
 
 .image-problem-div{
