--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -151,30 +151,7 @@
 
 .pg-box:hover,
 .box:hover {
-  animation-name: border-color-change;
-  box-shadow: 0px 0px 12px 5px #fff;
-}
-
-@keyframes border-color-change {
-  0% {
-    border: 5px solid #9dbebb;
-  }
-
-  25% {
-    border: 5px solid #8acaed;
-  }
-
-  50% {
-    border: 5px solid #96f1cd;
-  }
-
-  75% {
-    border: 5px solid #68b6a9;
-  }
-
-  100% {
-    border: 5px solid #52d3be;
-  }
+  box-shadow: 0px 0px 15px 3px #fff;
 }
 
 .no-request-container {
@@ -224,8 +201,15 @@
   margin: 0px auto;
 }
 
-.avatar-letter {
-  font-size: 3vw;
+.pg-profile {
+  width: inherit;
+  height: inherit;
+}
+
+.user-profile {
+  width: inherit;
+  height: inherit;
+  object-fit: cover;
 }
 
 .user-info-display {
