--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -269,13 +269,15 @@
   }
 }
 
-.imageProblem{
-  width: 70%;
-  max-height: 100%;
-}
-
 .image-problem-div{
+  width: 60%;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
-  align-items: center;
+}
+
+.image-problem {
+  width: inherit;
+  height: inherit;
+  object-fit: contain;
 }
