--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -5,6 +5,7 @@
   margin-left: 1vw;
   position: relative;
   color: inherit;
+  z-index: 10;
 }
 
 .logo-container {
@@ -521,16 +522,13 @@ input[type="file"] {
   }
 }
 
-#zipcode-input {
-  outline: none;
-}
-
 #zipcode-input::placeholder {
   font-size: large;
 }
 
 .request-preview-img-container {
-  width: 80%;
+  max-width: 80%;
+  width: 70%;
   height: 20%;
   margin: 0 auto;
 }
