some changes were made to the styling

--- a/frontend/src/components/offers/offer.css
+++ b/frontend/src/components/offers/offer.css
@@ -118,7 +118,7 @@ cursor: pointer;
   justify-content: space-between;
   /* background-color: #031926; */
 }
-.edit-delete-btn-gp{
+.pending-offer-edit-delete{
   /* background-color: #031926; */
   width: 30%;
   margin-left: -6rem;
