--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -125,6 +125,7 @@
   border-radius: 10px;
   height: inherit;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .pg-middle-section::-webkit-scrollbar {
