--- a/frontend/src/components/SessionForms/SignUpForm/signup.css
+++ b/frontend/src/components/SessionForms/SignUpForm/signup.css
@@ -51,6 +51,10 @@ input::placeholder {
     font-size: 1.3vw;
 }
 
+.zipcode-input::placeholder {
+    color: green !important;
+}
+
 input[type='text'], 
 input[type='password'],
 .signup-zipcode,
