now create request modal will always on top of everything else on the page

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -489,6 +489,17 @@ input[type="file"] {
 
 }
 
+.zipcode-input::placeholder {
+  font-size: large;
+}
+
+.add-request-btn {
+  width: fit-content !important;
+}
+
+.add-request-description-box {
+  resize: horizontal;
+}
 
 /* #selected-requests-btn,
 #selected-profile-btn,
