--- a/frontend/src/components/offers/offer.css
+++ b/frontend/src/components/offers/offer.css
@@ -9,7 +9,7 @@
   /* margin-bottom: 2rem; */
   /* margin-right: -3rem; */
   letter-spacing: 0.05em;
-  border: 1px solid green;
+/*   border: 1px solid green; */
 }
 
 .all-offers-scrollable-container {
