--- a/frontend/src/components/Problems/ProblemBox.css
+++ b/frontend/src/components/Problems/ProblemBox.css
@@ -4,12 +4,14 @@
     margin-bottom: 5rem;
 
 }
+
 .problems-container{
     margin-top: 2rem;
     width: 100%;
     /* text-align: center; */
 /* background-color: antiquewhite; */
 }
+
 .box{
     position: relative;
     width: 50%;
@@ -25,16 +27,18 @@
     animation-iteration-count: infinite;
 
 }
+
 .noproblem{
     width: 50%;
     margin: auto;
 }
+
 .catgory{
-    font-size: large;
+    font-size: 1.2vw;
     color:#031926;
-    border-bottom: 3px #031926 solid;
-    padding-bottom: 1rem;
+    text-align: center;
 }
+
 .add-offer-btn{
     margin: auto;
     padding: .5rem;
@@ -53,17 +57,21 @@
     background-color: white;
     box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.9);
 }
+
 .des-box{
     padding-top: 1rem;
     padding-bottom: .5rem;
     text-align: center;
-    font-size: x-large;
+    font-size: 1.6vw;
     /* border-bottom: 3px #031926 solid; */
-
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
 }
+
 .title{
     text-align: center;
 }
+
 .offer{
     width: 100%;
     /* background-color: aliceblue; */
@@ -71,14 +79,25 @@
     justify-content: center;
 
 }
+
 .status{
-    color:green;
     /* background-color: aliceblue; */
+    color: green !important;
     text-align: center;
-    
+    border-bottom: 3px #031926 solid;
+    padding-bottom: 1rem;
+    font-size: 1.2vw;
 }
+
 .user{
     cursor: pointer;
+    text-align: center;
+    font-size: 1.2vw;
+}
+
+.all-req-content {
+    color: #031926;
+    line-height: 1.3em;
 }
 
 .problem-edit-delete {
