--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -88,11 +88,22 @@
   margin-bottom: 3vw;
 }
 
-.pg-requester-open-status-btn,
+/* .pg-requester-open-status-btn,
 .pg-requester-resolved-status-btn,
 .helper-accepted-filter-btn,
 .helper-pending-filter-btn {
   padding-left: 2em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  margin-top: 1vw;
+  border-radius: 5px;
+  transition: background-color 1s;
+  cursor: pointer;
+} */
+
+.helper-accepted-filter-btn,
+.helper-pending-filter-btn {
+  padding-left: 1em;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
   margin-top: 1vw;
@@ -159,6 +170,7 @@
 
 .pg-user {
   font-size: 1.3vw;
+  text-align: center;
 }
 
 .pg-box:not(:nth-child(2)) {
@@ -168,15 +180,23 @@
 .pg-catgory {
   font-size: 1.2vw;
   color: #031926;
-  border-bottom: 3px #031926 solid;
   font-weight: 900;
-  padding-bottom: 1rem;
+  text-align: center;
 }
 
 .pg-status {
-  color: #1c6721;
   text-align: center;
   font-size: 1.3vw;
+  padding-bottom: 1rem;
+  border-bottom: 3px #031926 solid; 
+}
+
+.open-status {
+  color: green !important;
+}
+
+.closed-status {
+  color: rgb(74, 106, 74) !important;
 }
 
 .pg-des-box {
@@ -184,6 +204,17 @@
   margin-top: 0.6vw;
   text-align: center;
   padding: 1rem;
+  font-weight: bold;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.pg-content {
+  color: #031926;
+  line-height: 1.3em;
+}
+
+.pg-light, .all-req-lighter-text {
+  color: rgba(3, 25, 38, 0.65);
 }
 
 .pg-right-side-bar {
