matched pending offer and accepted offer styles

--- a/frontend/src/components/offers/offer.css
+++ b/frontend/src/components/offers/offer.css
@@ -66,6 +66,10 @@
   font-weight: 100 !important;
 }
 
+.pending-offer-content {
+  padding-top: 0;
+}
+
 .open-req-dim {
   color: rgb(212, 195, 150);
 }
