--- a/frontend/src/components/offers/offer.css
+++ b/frontend/src/components/offers/offer.css
@@ -9,7 +9,20 @@
   /* margin-bottom: 2rem; */
   /* margin-right: -3rem; */
   letter-spacing: 0.05em;
-/*   border: 1px solid green; */
+}
+
+.offer-container-on-notify {
+  /* border: 1px solid #031926; */
+  background-color: #4E868D;
+  border-radius: 5px;
+  padding: 1em;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.offer-container-on-notify:last-child {
+  margin-bottom: 2em;
 }
 
 .all-offers-scrollable-container {
@@ -35,6 +48,11 @@
 
 .req-offer-container .notify-modal-problems .box{
   width: 80%;
+  box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.9);
+}
+
+.req-offer-container .notify-modal-problems .box:hover {
+  box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.9);
 }
 
 .bigger {
