--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -486,7 +486,10 @@ input[type="file"] {
   width:100%;
   height: 100vh;
   overflow:auto;
+}
 
+.offerbox::-webkit-scrollbar {
+  display: none;
 }
 
 .zipcode-input::placeholder {
