--- a/frontend/src/components/offers/offer.css
+++ b/frontend/src/components/offers/offer.css
@@ -325,3 +325,12 @@ cursor: pointer;
   font-size: 1.5vw;
   color: #F4E9CD;
 }
+
+.request-modal-img-container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.request-modal-img {
+  width: inherit;
+}
